Change names of gmxapi::Version functions.
major() and minor() member functions clash with a historical macro,
producing compiler warnings. Change names to majorVersion(), etc.

Refs #2646

Change-Id: I568ab1dc216b200b182b34f76016fbfa54015dbd

--- a/src/api/cpp/include/version.h.in
+++ b/src/api/cpp/include/version.h.in
@@ -107,19 +107,19 @@ class Version
          *
          * \returns major version number
          */
-        static version_t major();
+        static version_t majorVersion();
 
         /*! \brief Query gmxapi minor version.
          *
          * \returns minor version number
          */
-        static version_t minor();
+        static version_t minorVersion();
 
         /*! \brief Query gmxapi patch level.
          *
          * \returns patch level number
          */
-        static version_t patch();
+        static version_t patchVersion();
 
         /*! \brief Get formatted release string.
          *
