[WIP] Densityfitting for GROMACS
The idea of this toolset is to assemble functionality to deal with
density maps as e.g. from cryo electron microscopy. It will include i/o
routines for density maps (ccp4 and xplor format), a module to allow to
do fitting to cryo-EM densities during the simulation, as well as an
analysis tool to compute average densities from a trajectory.

Refs #2282 and #2281

The module that does on-the-fly fitting to density maps is at the moment
implemented using the correlation-based density fitting potential V =
k*(1 - c.c.)
as described by Orzechowski and Tama in Biophys. J. 2008 "Flexible
Fitting
of High-Resolution X-Ray Structures into Cryoelectron Microscopy Maps
Using Biased Molecular Dynamics Simulations". Other alternatives
can/will
also be added.

Current functionality summary:
- deal with CCP4 density maps (read/write/embed to .tpr)
- spread out discrete atomic positions on a density grid using Gaussian
  functions
- calculate the correlation coefficient (c.c.) between the experimental
  and the simulated density and derive the corresponding atomic forces
- read in density fitting .mdp parameters (which index group to submit
  to the potential, what k and sigma to use)
- allow the user to implement time-dependent fitting protocols
  by giving k and sigma as a function of time (similar to the simulated
  annealing protocol)
- spreading and force calculation are SIMD-accelerated

This patch originates from a) old C code written in the early days of
4.6,
so it does not yet conform to today's coding standards in GROMACS.
It is working as expected, also in parallel, and is hopefully a good
starting point for a density fitting force provider module.
b) from the "tide" trajectory analysis module written by Camilo Aponte
and
Rodolfo Briones that computes time-averaged electron density map
from an MD trajectory.

Everything is highly WIP and lots of things need to be done, some of it
are:
- get rid of the dependency on the CCP4 library cmaplib

--- a/src/programs/mdrun/tests/CMakeLists.txt
+++ b/src/programs/mdrun/tests/CMakeLists.txt
@@ -56,6 +56,8 @@ gmx_add_gtest_executable(
     rerun.cpp
     swapcoords.cpp
     tabulated_bonded_interactions.cpp
+    interactiveMD.cpp
+    densityfitting.cpp
     termination.cpp
     tpitest.cpp
     trajectory_writing.cpp
